--- a/app/views/contests/show.html.erb
+++ b/app/views/contests/show.html.erb
@@ -15,19 +15,21 @@
 </p>
 
 <div>
-  <table>
+  <table border="1">
     <tr>
       <th>Rank</th>
       <th>Team</th>
       <% @contest.problems.each_with_index do |problem, i| %>
         <th>
           <% if @contest.running? or @contest.finished? %>
-            <%= link_to ("A".ord + i).chr, problem.judge_url %>
+            <%= link_to ("A".ord + i).chr + " - #{problem.number}", problem.judge_url %>
           <% else %>
             <%= ("A".ord + i).chr %>
           <% end %>
         </th>
       <% end %>
+      <th>Solved</th>
+      <th>Penalty</th>
     </tr>
     
     <% @contest.teams_sorted_by_score.each_with_index do |team, i| %>
@@ -35,8 +37,10 @@
         <td><%= i + 1 %></td>
         <td><%= team.username %></td>
         <% @contest.problems.each do |problem| %>
-          <td>--/--</td>
+          <td><%= format_tries(team, problem) %>/<%= format_time_of_first_solution(@contest.time_of_first_solution(team, problem)) %></td>
         <% end %>
+        <td><%= @contest.number_of_solved_problems(team) %></td>
+        <td><%= @contest.total_penalty(team) %></td>
       </tr>
     <% end %>
   </table>
