Refreshing automatically every 60 seconds. Can be AJAXified nicely later.

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -6,6 +6,7 @@
     <%= javascript_include_tag "application" %>
     <%= csrf_meta_tag %>
     <%= yield(:head) %>
+    <meta http-equiv="refresh" content="60">
   </head>
   <body>
     <div id="container">
