--- a/app/views/contests/show.html.erb
+++ b/app/views/contests/show.html.erb
@@ -2,6 +2,14 @@
 <% title "Contest: #{@contest.name}" %>
 
 <div>
+  <p>
+    <%= link_to "Edit this contest", edit_contest_path(@contest) %> |
+    <%= link_to "Destroy this contest", @contest, :confirm => 'Are you sure?', :method => :delete %> |
+    <%= link_to "View all contests", contests_path %>
+  </p>
+</div>
+
+<div>
   <span><b>Duration:</b> <%= format_time(@contest.duration) %></span>
   <span><b>Time left:</b> <%= format_time_left(@contest) %></span>
 </div>
@@ -55,10 +63,4 @@
 
 <p>
   <%= link_to "View all submissions (#{@contest.submissions.count})", contest_submissions_path(@contest) %>
-</p>
-
-<p>
-  <%= link_to "Edit", edit_contest_path(@contest) %> |
-  <%= link_to "Destroy", @contest, :confirm => 'Are you sure?', :method => :delete %> |
-  <%= link_to "View All", contests_path %>
 </p>
