--- a/app/views/contests/index.html.erb
+++ b/app/views/contests/index.html.erb
@@ -20,3 +20,11 @@
 </table>
 
 <p><%= link_to "New Contest", new_contest_path %></p>
+
+<p>
+  <h2>Useful files</h2>
+  <ul>
+    <li><%= link_to "Introduction to Algorithms", "http://s3.amazonaws.com/andmej/cormen.pdf" %></li>    
+    <li><%= link_to "Introduction to Algorithms (Instructor's manual)", "http://s3.amazonaws.com/andmej/cormen_instructor_manual.pdf" %></li>
+  </ul>
+</p>
