--- a/app/views/contests/index.html.erb
+++ b/app/views/contests/index.html.erb
@@ -5,6 +5,7 @@
     <th>Name</th>
     <th>Start Date</th>
     <th>End Date</th>
+    <th>Status</th>
     <th colspan="3">Controls</th>
   </tr>
   <% for contest in @contests %>
@@ -12,6 +13,7 @@
       <td><%= contest.name %></td>
       <td><%= l contest.start_date, :format => :long %></td>
       <td><%= l contest.end_date, :format => :long %></td>
+      <td><%= contest_status(contest) %></td>
       <td><%= link_to "Show", contest %></td>
       <td><%= link_to "Edit", edit_contest_path(contest) %></td>
       <td><%= link_to "Destroy", contest, :confirm => 'Are you sure?', :method => :delete %></td>
