Adding some more useful links

--- a/app/views/contests/index.html.erb
+++ b/app/views/contests/index.html.erb
@@ -24,9 +24,16 @@
 <p><%= link_to "New Contest", new_contest_path %></p>
 
 <p>
-  <h2>Useful files</h2>
+  <h2>Useful links and files</h2>
+  <h3>Contests</h3>
   <ul>
-    <li><%= link_to "Introduction to Algorithms", "http://s3.amazonaws.com/andmej/cormen.pdf" %></li>    
+    <li><%= link_to "COCI", "http://hsin.hr/coci/" %></li>
+  </ul>
+  <h3>Books</h3>
+  <ul>
+    <li><%= link_to "Introduction to Algorithms", "http://s3.amazonaws.com/andmej/cormen.pdf" %></li>
     <li><%= link_to "Introduction to Algorithms (Instructor's manual)", "http://s3.amazonaws.com/andmej/cormen_instructor_manual.pdf" %></li>
+    <li><%= link_to "The Algorithm Design Manual", "http://www.cs.sysu.edu.cn/~lxm/DSA/textbook/Skiena.-.TheAlgorithmDesignManual.pdf" %></li>
+    <li><%= link_to "Programming Challenges", "http://s3.amazonaws.com/andmej/programming-challenges.pdf" %></li>
   </ul>
 </p>
