Use polling to update scoreboard. That way, the whole page is not refreshed and you can continue writing your Disqus comments.

--- a/app/views/contests/show.html.erb
+++ b/app/views/contests/show.html.erb
@@ -1,4 +1,3 @@
-<% refresh_in_seconds(60) %>
 <% title "Contest: #{@contest.name}" %>
 
 <div>
@@ -23,38 +22,8 @@
   <%= l @contest.end_date, :format => :long %>
 </p>
 
-<div>
-  <table border="1">
-    <tr>
-      <th>Rank</th>
-      <th>Team</th>
-      <% @contest.problems.each_with_index do |problem, i| %>
-        <th>
-          <% if @contest.running? or @contest.finished? %>
-            <%= link_to "#{@contest.letter_for_problem(problem)} - #{problem.number}", problem.judge_url, :target => "_blank" %>
-          <% else %>
-            <%= @contest.letter_for_problem(problem) %>
-          <% end %>
-        </th>
-      <% end %>
-      <th>Solved</th>
-      <th>Penalty</th>
-    </tr>
-    
-    <% @contest.teams_sorted_by_score.each_with_index do |team, i| %>
-      <tr>
-        <td><%= i + 1 %></td>
-        <td><%= team.username %></td>
-        <% @contest.problems.each do |problem| %>
-          <td class="<%= class_for_problem(team, problem) %>">
-            <%= format_tries(team, problem) %>/<%= format_time_of_first_solution(@contest.time_of_first_solution(team, problem)) %>
-          </td>
-        <% end %>
-        <td><%= @contest.number_of_solved_problems(team) %></td>
-        <td><%= @contest.total_penalty(team) %></td>
-      </tr>
-    <% end %>
-  </table>
+<div id="scoreboard" data-url="<%= contest_url(@contest, :format => :js) %>">
+  <%= render "scoreboard" %>
 </div>
 
 <h3>Last 10 submissions</h3>
