--- a/app/views/contests/show.html.erb
+++ b/app/views/contests/show.html.erb
@@ -1,12 +1,14 @@
 <% title "Contest: #{@contest.name}" %>
 
-<div>
-  <p>
-    <%= link_to "Edit this contest", edit_contest_path(@contest) %> |
-    <%= link_to "Destroy this contest", @contest, :confirm => 'Are you sure?', :method => :delete %> |
-    <%= link_to "View all contests", contests_path %>
-  </p>
-</div>
+<% if logged_in? %>
+    <div>
+      <p>
+        <%= link_to "Edit this contest", edit_contest_path(@contest) %> |
+        <%= link_to "Destroy this contest", @contest, :confirm => 'Are you sure?', :method => :delete %> |
+        <%= link_to "View all contests", contests_path %>
+      </p>
+    </div>
+<% end %>
 
 <div>
   <span><b>Duration:</b> <%= format_time(@contest.duration) %></span>
