Anybody can add a new team to a running contest now.

--- a/app/views/contests/show.html.erb
+++ b/app/views/contests/show.html.erb
@@ -28,6 +28,12 @@
   <%= render "scoreboard" %>
 </div>
 
+<% unless @contest.finished? %>
+    <p>
+        <%= link_to "Add new team", new_contest_team_path(@contest) %>
+    </p>
+<% end %>
+
 <h3>Last 10 submissions</h3>
 
 <%= render "submissions/submissions" %>
