--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -9,8 +9,11 @@
   </head>
   <body>
     <div id="container">
+        <div>
       <% if current_user %>
-        <div>You are currently logged in. <%= link_to "Log out.", session_path, :method => :delete %></div>
+        You are currently logged in. <%= link_to "Log out.", session_path, :method => :delete %>
+      <% else %>
+        <%= link_to "Log in", new_session_path %> to make changes.
       <% end %>
 
       <% flash.each do |name, msg| %>
