--- a/app/views/contests/index.html.erb
+++ b/app/views/contests/index.html.erb
@@ -6,6 +6,7 @@
     <th>Start Date</th>
     <th>End Date</th>
     <th>Status</th>
+    <th colspan="2">Controls</th>
   </tr>
   <% for contest in @contests %>
     <tr>
@@ -14,11 +15,9 @@
       <td><%= l contest.end_date, :format => :long %></td>
       <td><%= contest_status(contest) %></td>
       
-      <% if logged_in? %>
-          <td><%= link_to "Edit", edit_contest_path(contest) %></td>
-          <td><%= link_to "Destroy", contest, :confirm => 'Are you sure?', :method => :delete %></td>
-      <% end %>
-    </tr>
+      <td><%= link_to "Edit", edit_contest_path(contest) %></td>
+      <td><%= link_to "Destroy", contest, :confirm => 'Are you sure?', :method => :delete %></td>
+  </tr>
   <% end %>
 </table>
 
