Only show books if you are logged in.

--- a/app/views/contests/index.html.erb
+++ b/app/views/contests/index.html.erb
@@ -29,11 +29,13 @@
   <ul>
     <li><%= link_to "COCI", "http://hsin.hr/coci/" %></li>
   </ul>
-  <h3>Books</h3>
-  <ul>
-    <li><%= link_to "Introduction to Algorithms", "http://s3.amazonaws.com/andmej/cormen.pdf" %></li>
-    <li><%= link_to "Introduction to Algorithms (Instructor's manual)", "http://s3.amazonaws.com/andmej/cormen_instructor_manual.pdf" %></li>
-    <li><%= link_to "The Algorithm Design Manual", "http://www.cs.sysu.edu.cn/~lxm/DSA/textbook/Skiena.-.TheAlgorithmDesignManual.pdf" %></li>
-    <li><%= link_to "Programming Challenges", "http://s3.amazonaws.com/andmej/programming-challenges.pdf" %></li>
-  </ul>
+  <% if logged_in? %>
+    <h3>Books</h3>
+    <ul>
+      <li><%= link_to "Introduction to Algorithms", "http://s3.amazonaws.com/andmej/cormen.pdf" %></li>
+      <li><%= link_to "Introduction to Algorithms (Instructor's manual)", "http://s3.amazonaws.com/andmej/cormen_instructor_manual.pdf" %></li>
+      <li><%= link_to "The Algorithm Design Manual", "http://www.cs.sysu.edu.cn/~lxm/DSA/textbook/Skiena.-.TheAlgorithmDesignManual.pdf" %></li>
+      <li><%= link_to "Programming Challenges", "http://s3.amazonaws.com/andmej/programming-challenges.pdf" %></li>
+    </ul>
+  <% end %>
 </p>
